--- a/HDMI/Demo/README
+++ b/HDMI/Demo/README
@@ -1,2 +1,6 @@
 This is the basic demo example I will modify as I work on future HDMI projects.
 A demo video of it working is provided.
+
+HDMI Project List:
+
+1) Create a new test pattern to just write 1 unique color to the screen.
