--- a/HDMI/Demo/README
+++ b/HDMI/Demo/README
@@ -14,3 +14,6 @@ According to the TMDS_rPLL.ipc "Inter-Package Connection" file the output clock 
 The video_top module instantiates the CLKDIV ipcore module provided by Gowin which takes an input clock and 
  divides it by its selected mode, which in this case was 5. This FPGA does not support division by 8.
  Given the input clock was the TMDS clock the pix_clk should be ~(371.25 / 5) = 74.25 MHz
+In order to actually simulate this design I would need access to the DVI_TX_Top ipcore Gowin design files
+ or alternatively a logic analyzer that can analyze the HDMI signals at high frequencies.
+Another idea I could try is modifying the testpattern example code without simulation, which would less ideal
